<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<TextView
		android:id="@+id/day_of_month"
		android:layout_width="60dp"
		android:layout_height="25dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="10dp"
		android:background="@color/light_green"
		android:gravity="center"
		android:textColor="@color/grey_00"
		android:textSize="20sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@id/drink_name"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:text="@string/daily_drink_status_default_date" />

	<TextView
		android:id="@+id/drink_name"
		android:layout_width="60dp"
		android:layout_height="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="10dp"
		android:gravity="center"
		android:text="@string/daily_drink_status_menu"
		android:textColor="#000000"
		android:textSize="15sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/day_of_month" />

	<TextView
		android:id="@+id/drink_name_text"
		android:layout_width="wrap_content"
		android:layout_height="20dp"
		android:layout_marginStart="10dp"
		android:layout_marginTop="10dp"
		android:gravity="start"
		android:textColor="@color/darker_grey"
		android:textSize="@dimen/daily_status_text_size"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toEndOf="@id/drink_name"
		app:layout_constraintTop_toBottomOf="@+id/day_of_month"
		tools:text="@string/soju" />

	<TextView
		android:id="@+id/drink_amount"
		android:layout_width="60dp"
		android:layout_height="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="10dp"
		android:gravity="center"
		android:textColor="@color/grey_00"
		android:textSize="15sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/drink_name_text"
		tools:text="@string/daily_drink_status_amount" />

	<TextView
		android:id="@+id/drink_amount_text"
		android:layout_width="wrap_content"
		android:layout_height="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="10dp"
		android:gravity="start"
		android:textColor="@color/darker_grey"
		android:textSize="@dimen/daily_status_text_size"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toEndOf="@id/drink_amount"
		app:layout_constraintTop_toBottomOf="@+id/drink_name_text"
		tools:text="@string/daily_drink_status_default_amount" />

	<TextView
		android:id="@+id/drink_memo"
		android:layout_width="60dp"
		android:layout_height="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="10dp"
		android:gravity="center"
		android:textColor="@color/grey_00"
		android:textSize="15sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/drink_amount"
		tools:text="@string/daily_drink_status_memo" />

	<TextView
		android:id="@+id/drink_memo_text"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:layout_marginTop="10dp"
		android:maxLines="3"
		android:textColor="@color/darker_grey"
		android:textSize="@dimen/daily_status_text_size"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toEndOf="@+id/drink_memo"
		app:layout_constraintTop_toBottomOf="@+id/drink_amount"
		tools:text="@string/daily_drink_status_default_memo" />
</androidx.constraintlayout.widget.ConstraintLayout>